feat: ms-users refactor done

--- a/ms-free-area/src/main/resources/application.properties
+++ b/ms-free-area/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=debug
-#ms.users.url=${FREE_AREA_URL:ms-users:8001}
+ms.users.url=${MS_USERS_URL:ms-users:8001}
