--- a/ms-users/src/main/resources/application.properties
+++ b/ms-users/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=debug
-ms.free-area.url=${FREE_AREA_URL:ms-free-area:8002}
+ms.free-area.url=${MS_FREE_AREA_URL:ms-free-area:8002}
+ms.private-area.url=${MS_PRIVATE_AREA_URL:ms-private-area:8003}
