--- a/ms-free-area/pom.xml
+++ b/ms-free-area/pom.xml
@@ -77,6 +77,11 @@
             <version>${version.lombok}</version>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
