--- a/ms-api-ext/src/main/resources/application.properties
+++ b/ms-api-ext/src/main/resources/application.properties
@@ -1,7 +1,21 @@
 spring.application.name=ms-api-ext
 server.port=${PORT:8004}
-#spring.jpa.generate-ddl=true
-logging.level.org.hibernate.SQL=debug
-#ms.users.url=${MS_USERS_URL:ms-users:8001}
 spring.data.mongodb.uri=mongodb://localhost:27017/local
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=info
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+#ms.users.url=${MS_USERS_URL:ms-users:8001}
+
+#SWAGGER
+springdoc.api-docs.path=/api-docs
+management.endpoints.web.exposure.include=*
+
+#EUREKA
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
+
+#TRACE
+logging.level.org.springframework.security=trace
 
