--- a/ms-consumer/src/main/resources/application.properties
+++ b/ms-consumer/src/main/resources/application.properties
@@ -5,7 +5,26 @@ spring.kafka.consumer.group-id=chat-group
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
-logging.level.org.hibernate.SQL=debug
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=info
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 #ms.users.url=${MS_USERS_URL:ms-users:8001}
+
+#SWAGGER
+springdoc.api-docs.path=/api-docs
+management.endpoints.web.exposure.include=*
+
+#EUREKA
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+#TRACE
+logging.level.org.springframework.security=trace
+
+#Anotaciones para desahibilitar logs en los test
+#logging.level.org.springframework=OFF
+#logging.level.root=OFF
+#spring.main.banner-mode=OFF
 
 
