--- a/ms-free-area/src/main/resources/application.properties
+++ b/ms-free-area/src/main/resources/application.properties
@@ -5,6 +5,26 @@ spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:granada290378}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-#spring.jpa.generate-ddl=true
-logging.level.org.hibernate.SQL=debug
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=info
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+#FEIGN
 ms.users.url=${MS_USERS_URL:ms-users:8001}
+
+#SWAGGER
+springdoc.api-docs.path=/api-docs
+management.endpoints.web.exposure.include=*
+
+#EUREKA
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+#TRACE
+logging.level.org.springframework.security=trace
+
+#Anotaciones para desahibilitar logs en los test
+#logging.level.org.springframework=OFF
+#logging.level.root=OFF
+#spring.main.banner-mode=OFF
