--- a/ms-gateway/src/main/resources/application.properties
+++ b/ms-gateway/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=msvc-gateway
 server.port=8090
+
+#EUREKA
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
