--- a/ms-producer/src/main/resources/application.properties
+++ b/ms-producer/src/main/resources/application.properties
@@ -3,5 +3,25 @@ server.port=${PORT:8082}
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-logging.level.org.hibernate.SQL=debug
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=info
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 #ms.users.url=${MS_USERS_URL:ms-users:8001}
+
+#SWAGGER
+springdoc.api-docs.path=/api-docs
+management.endpoints.web.exposure.include=*
+
+#EUREKA
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
+
+#TRACE
+logging.level.org.springframework.security=trace
+
+#Anotaciones para desahibilitar logs en los test
+#logging.level.org.springframework=OFF
+#logging.level.root=OFF
+#spring.main.banner-mode=OFF
