--- a/ms-users/src/main/resources/application.properties
+++ b/ms-users/src/main/resources/application.properties
@@ -5,7 +5,28 @@ spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:granada290378}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-#spring.jpa.generate-ddl=true
-logging.level.org.hibernate.SQL=debug
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=info
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+#FEIGN
 ms.free-area.url=${MS_FREE_AREA_URL:ms-free-area:8002}
 ms.private-area.url=${MS_PRIVATE_AREA_URL:ms-private-area:8003}
+
+#SWAGGER
+springdoc.api-docs.path=/api-docs
+management.endpoints.web.exposure.include=*
+
+#EUREKA
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
+
+#TRACE
+logging.level.org.springframework.security=trace
+
+#Anotaciones para desahibilitar logs en los test
+#logging.level.org.springframework=OFF
+#logging.level.root=OFF
+#spring.main.banner-mode=OFF
