--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>ms-consumer</module>
         <module>ms-api-ext</module>
         <module>eureka</module>
+        <module>config-server</module>
 
 
     </modules>
