--- a/ms-private-area/pom.xml
+++ b/ms-private-area/pom.xml
@@ -108,6 +108,12 @@
             <artifactId>spring-cloud-netflix-eureka-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <dependencyManagement>
