--- a/ms-users/pom.xml
+++ b/ms-users/pom.xml
@@ -137,6 +137,11 @@
             <artifactId>spring-cloud-netflix-eureka-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
