--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>ms-api-ext</module>
         <module>eureka</module>
         <module>config-server</module>
+        <module>ms-oauth</module>
 
     </modules>
     <properties>
