--- a/ms-auth-server/src/main/resources/application.properties
+++ b/ms-auth-server/src/main/resources/application.properties
@@ -1,9 +1,2 @@
-#CONFIGURATION AUTH SERVER SPRING
-spring.application.name=auth-server
-server.port= 9100
-
-#EUREKA
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-
-#TRACE
-logging.level.org.springframework.security=trace
+spring.application.name=ms-auth-server
+server.port=9000
