--- a/ms-users/src/main/resources/application.properties
+++ b/ms-users/src/main/resources/application.properties
@@ -24,7 +24,7 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.instance.hostname=localhost
 
 #TRACE
-logging.level.org.springframework.security=trace
+logging.level.org.springframework.security=DEBUG
 
 #Anotaciones para desahibilitar logs en los test
 #logging.level.org.springframework=OFF
