--- a/ms-auth-server/src/main/resources/application.properties
+++ b/ms-auth-server/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=ms-auth-server
 server.port=9000
+logging.level.org.springframework.security.oauth2.server.authorization=DEBUG
