fix: gateway centralized cors and register user

--- a/ms-resource-server/src/main/resources/application.properties
+++ b/ms-resource-server/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=ms-resource-server
-
 logging.level.org.springframework.security=TRACE
 logging.level.org.springframework.security.oauth2=TRACE
-
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
-
+#EUREKA
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
