--- a/ms-auth-server/src/main/resources/application.properties
+++ b/ms-auth-server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=ms-auth-server
 server.port=9000
 logging.level.org.springframework.security.oauth2.server.authorization=DEBUG
+#EUREKA
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
