--- a/ms-gateway/src/main/resources/application.yml
+++ b/ms-gateway/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://127.0.0.1:9000
+          issuer-uri: http://localhost:9000
       client:
         registration:
           client-app:
@@ -11,17 +11,29 @@ spring:
             client-id: client
             client-secret: 12345
             authorization-grant-type: authorization_code
-            #redirect-uri: http://127.0.0.1:9000/authorized
             redirect-uri: http://localhost:4200/authorized
             scope:
               - openid
-              #- profile
             client-name: client
         provider:
           spring:
-            issuer-uri: http://127.0.0.1:9000
+            issuer-uri: http://localhost:9000
   cloud:
     gateway:
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: "http://localhost:4200"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - OPTIONS
+              - PATCH
+            allowedHeaders: "*"
+            allowCredentials: true
+            maxAge: 3600
       routes:
         - id: ms-users
           uri: lb://ms-users
@@ -42,7 +54,7 @@ spring:
           filters:
             - StripPrefix=1
         - id: ms-auth-server
-          uri: lb://ms-auth-server
+          uri: http://localhost:9000
           predicates:
             - Path=/ms-auth-server/**
           filters:
@@ -71,3 +83,8 @@ spring:
             - Path=/ms-resource-server/**
           filters:
             - StripPrefix=1
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
