--- a/ms-users/src/main/resources/application.yml
+++ b/ms-users/src/main/resources/application.yml
@@ -3,4 +3,4 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://127.0.0.1:9000
+          issuer-uri: http://localhost:9000
