feature: ms-users free-area private-are endpoints DELETE and POST

--- a/ms-private-area/src/main/resources/application.properties
+++ b/ms-private-area/src/main/resources/application.properties
@@ -24,3 +24,5 @@ logging.level.org.springframework.security=trace
 #logging.level.org.springframework=OFF
 #logging.level.root=OFF
 #spring.main.banner-mode=OFF
+#SECRET
+freearea.internal-token=granada290378
