--- a/ms-users/src/main/resources/application.properties
+++ b/ms-users/src/main/resources/application.properties
@@ -25,3 +25,5 @@ logging.level.org.springframework.security=DEBUG
 #logging.level.org.springframework=OFF
 #logging.level.root=OFF
 #spring.main.banner-mode=OFF
+#SECRET
+freearea.internal-token=granada290378
