First test for hidden endpoints

--- a/ms-auth-server/src/main/resources/application.properties
+++ b/ms-auth-server/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=9000
 logging.level.org.springframework.security.oauth2.server.authorization=DEBUG
 #EUREKA
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#SECRET
+users.service.token=granada290378
