--- a/ms-users/src/main/resources/application.properties
+++ b/ms-users/src/main/resources/application.properties
@@ -27,3 +27,4 @@ logging.level.org.springframework.security=DEBUG
 #spring.main.banner-mode=OFF
 #SECRET
 freearea.internal-token=granada290378
+auth.internal-token=granada290378
